<resources>
    <string name="app_name">Exercises 5.15</string>
    <string name="text_img_avatar">Student\'s avartar</string>
    <string name="title_student_info">Thông tin sinh viên</string>
    <string name="error_no_data">Lỗi dữ liệu</string>
    <string name="title_id">Mã SV:</string>
    <string name="title_full_name">Họ và Tên:</string>
    <string name="title_address">Địa chỉ:</string>
    <string name="title_email">Email:</string>
    <string name="title_major">Chuyên ngành:</string>
    <string name="title_year">SV năm thứ:</string>
    <string name="title_gender">Giới tính:</string>
    <string name="title_birth_date">Ngày sinh:</string>
    <string name="title_gpa">Điểm TB tích lũy:</string>
    <string name="text_btn_add_new_student">Thêm mới sinh viên</string>
    <string name="hint_full_name">Họ và tên</string>
    <string name="hint_birth_date">Ngày sinh. Ví dụ: 01/01/2001</string>
    <string name="hint_email">Email</string>
    <string name="hint_major">Chuyên ngành</string>
    <string name="hint_gpa">Điểm gpa</string>
    <string name="hint_year">Sinh viên năm thứ</string>
    <string name="hint_address">Địa chỉ(tỉnh/thành phố)</string>
    <string name="action_radio_male">Nam</string>
    <string name="action_radio_female">Nữ</string>
    <string name="action_radio_other">Khác</string>
    <string name="hint_student_id">Mã sinh viên</string>
    <string name="title_label">Thêm sinh viên mới</string>
    <string name="action_submit">Hoàn tất</string>
    <string name="title_detail">Chi tiết sinh viên</string>
    <string name="title_student_list">Danh sách sinh viên</string>
    <string name="title_new_student">Thêm mới sinh viên</string>
    <string name="hint_id_error">Mã sinh viên không được để trống</string>
    <string name="err_full_name">Họ và tên không được để trống</string>
    <string name="hint_birth_date_empty">Ngày sinh không được để trống</string>
    <string name="hint_birth_date_incorrect">Định dạng ngày sinh không đúng</string>
    <string name="hint_email_empty">Email không được để trống</string>
    <string name="hint_gpa_empty">Điểm TB tích lũy không được bỏ trống</string>
    <string name="hint_gpa_invalid">Điểm gpa hệ 4 không hợp lệ</string>
    <string name="msg_student_existed">Đã tồn tại sinh viên với mã SV này!</string>
    <string name="title_item_student_id">SV1005</string>
    <string name="title_item_full_name">Nguyễn Thị Ngọc Mai</string>
    <string name="title_item_gpa">3.68</string>
    <string name="menu_item_edit">Sửa thông tin</string>
    <string name="menu_item_done">Hoàn tất</string>
    <string name="menu_item_search_by_id">Tìm theo mã SV</string>
    <string name="menu_item_search_by_name">Tìm theo tên SV</string>
    <string name="menu_item_search_by_gpa">Tìm theo điểm GPA</string>
    <string name="menu_item_sort_by_id">Sắp xếp theo mã SV</string>
    <string name="menu_item_sort_by_name">Sắp xếp theo tên</string>
    <string name="menu_item_sort_by_gpa">Sắp xếp theo điểm</string>
    <string name="text_edit_student">Sửa thông tin</string>
    <string name="hint_search">Nhập tên SV</string>
    <string name="msg_search_result">Tìm thấy %d kết quả</string>
    <!-- mảng thể hiện sinh viên năm thứ k -->
    <string-array name="year_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <!-- mảng thể hiện danh sách các tỉnh, thành phố -->
    <string-array name="city_array">
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
        <item>Đà Nẵng</item>
        <item>An Giang</item>
        <item>Bà Rịa-Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Cạn</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Dương</item>
        <item>Bình Định</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Đắc Lắc</item>
        <item>Đắc Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Lâm Đồng</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>
    <!-- mảng thể hiện danh sách các chuyên ngành -->
    <string-array name="major_array">
        <item>CNTT</item>
        <item>HTTT</item>
        <item>ĐT-VT</item>
        <item>QTKD</item>
        <item>Cơ Khí</item>
        <item>Tài Chính</item>
        <item>Kế Toán</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_update_confirm">Bạn có chắc chắn muốn lưu lại các thay đổi này?</string>
    <string name="msg_cancel_update">Các thay đổi chưa được lưu lại, bạn có thể chỉnh sửa thêm.</string>
    <string name="desc_image_button">Image button more</string>
    <string name="menu_view_detail">Chi tiết</string>
    <string name="menu_delete">Xóa bỏ</string>
    <string name="msg_delete_confirm">Bạn chắc chắn muốn xóa bỏ sinh viên này?</string>
    <string name="msg_delete_cancel">Thao tác xóa sinh viên này đã bị hủy bỏ.</string>
</resources>