<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_ripple"
    android:clickable="true"
    android:focusable="true">
    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/img_width_80"
        android:layout_height="@dimen/img_height_80"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:contentDescription="@string/text_img_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_man_24" />

    <TextView
        android:id="@+id/tv_student_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/title_item_student_id"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_more"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:text="@string/title_item_full_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_student_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_student_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id" />

    <TextView
        android:id="@+id/tv_gpa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:text="@string/title_item_gpa"
        app:layout_constraintEnd_toEndOf="@+id/tv_full_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_full_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

    <ImageButton
        android:id="@+id/img_btn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="?android:colorBackground"
        android:contentDescription="@string/desc_image_button"
        android:minWidth="@dimen/size_48"
        android:minHeight="@dimen/size_48"
        android:scaleType="fitCenter"
        android:padding="@dimen/padding_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_black"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>